# routes/api.php
@@ -12,6 +12,7 @@ use App\Http\Controllers\SaleController;
 Route::middleware(['api'])->group(function () {
     Route::post('/login', [AuthController::class, 'login']);
     Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
 
     Route::get('/users', [UserController::class, 'getAll']);
     Route::post('/users', [UserController::class, 'create']);
